feat(BE-06): specify recoverable issue draft in Data API v1.2
